<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/time_wrap"
            >
            <ImageView
                android:id="@+id/ideas"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/ideas"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <View
            android:layout_below="@id/time_wrap"
            android:layout_width="fill_parent"
            android:id="@+id/shadow"
            android:layout_height="5dip"
            android:background="@drawable/drop_shadow"
            >
        </View>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_wrap"
            android:id="@+id/relativeLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_personal_development_app_desc"
                android:id="@+id/personal_dev_content"
                android:layout_below="@+id/personal_dev"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/string_personal_development_app"
                android:id="@+id/personal_dev"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_ep_lead"
            android:id="@+id/ep_lead_title"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignLeft="@+id/relativeLayout"
            android:layout_alignStart="@+id/relativeLayout"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_ep_lead_desc"
            android:id="@+id/ep_lead_desc"
            android:layout_below="@+id/ep_lead_title"
            android:layout_alignLeft="@+id/ep_lead_title"
            android:layout_alignStart="@+id/ep_lead_title"
            android:layout_alignRight="@+id/relativeLayout"
            android:layout_alignEnd="@+id/relativeLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_finance_management"
            android:id="@+id/finance_title"
            android:layout_below="@+id/ep_lead_desc"
            android:layout_alignLeft="@+id/ep_lead_desc"
            android:layout_alignStart="@+id/ep_lead_desc"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_finance_management_desc"
            android:id="@+id/finance_desc"
            android:layout_below="@+id/finance_title"
            android:layout_alignLeft="@+id/finance_title"
            android:layout_alignStart="@+id/finance_title"
            android:layout_marginBottom="20dp"
            android:layout_alignRight="@+id/ep_lead_desc" />
    </RelativeLayout >
</ScrollView>