<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/virtual_team_wrap"
            >
            <ImageView
            android:id="@+id/virtual_team"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:src="@drawable/virtual_team"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <View
            android:layout_below="@id/virtual_team_wrap"
            android:layout_width="fill_parent"
            android:id="@+id/shadow"
            android:layout_height="5dip"
            android:background="@drawable/drop_shadow"
            >
        </View>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/virtual_team_wrap"
            >
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_virtual_teams_title"
            android:id="@+id/virtual_teams_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_projects_websites"
                android:id="@+id/websites"
                android:layout_below="@+id/virtual_teams_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_projects_expa"
                android:id="@+id/expa"
                android:layout_below="@id/websites"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_virtual_teams_sumup"
                android:id="@+id/virtual_temas_sumup"
                android:layout_below="@id/expa"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

        </RelativeLayout >
    </RelativeLayout >
</ScrollView>